sample/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: myapp-api-service
spec:
    selector:
        app: myapp-api   
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    type: LoadBalancer
