sample/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host : api-sample.kamanoaws.com
    http:
      paths:
      - path: /api/?(.*)
        pathType: Exact
        backend:
          service:
            name: myapp-api-service
            port:
              number: 80
      # - path: /api/?(.*)
      #   backend:
      #     serviceName: k8-training-api
      #     servicePort: 80
